Corrected typo in picture

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -87,7 +87,7 @@
             </p>
         </div>
         <div class="member-photo">
-            <img src="/images/michael.jpg" alt="Michael Lewellen">
+            <img src="/images/Michael.jpg" alt="Michael Lewellen">
         </div>
     </div>
     
